# test_task_0

./: test.ipynb  test.py
django_task/: db_dump.tar  pyproject.toml
django_task/django_task/: settings.py  urls.py
django_task/okwork/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
django_task/okwork/migrations/: 0001_initial.py
django_task/okwork/static/css/: base.css
django_task/okwork/static/js/: main.js
django_task/okwork/templates/: base.html  home.html
django_task/okwork/templates/auth/: login.html  register.html
django_task/okwork/templates/client/: edit.html  profile.html
django_task/okwork/templates/performer/: edit.html  profile.html
django_task/okwork/templatetags/: __init__.py
